# AI-Packet-Analyzer

./: .gitignore  AGENTS.md  AI-Packet-Analyzer-Plan.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  jobs.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/detectors/: __init__.py  heuristics.py
backend/app/llm/: provider.py
backend/app/models/: __init__.py  schemas.py
backend/app/parsers/: __init__.py  base.py  scapy_parser.py
backend/app/services/: analysis.py  flow_builder.py  job_service.py  storage.py
backend/data/: packet_analyzer.db
backend/tests/: test_flow_builder.py  test_heuristics.py  test_job_queries.py  test_storage.py  test_tls_parser.py
docs/: architecture.md  roadmap.md  setup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FindingsTable.tsx  FlowDetailPanel.tsx  FlowExplorer.tsx  StatusStrip.tsx  SummaryPanel.tsx  UploadPanel.tsx
frontend/src/styles/: app.css
frontend/src/types/: api.ts
