[project]
name = "ai-packet-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for AI Packet Analyzer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "scapy>=2.5,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
